--- a/cv-vitae/schneeman-brent-resume.Rmd
+++ b/cv-vitae/schneeman-brent-resume.Rmd
@@ -20,16 +20,21 @@ library(vitae)
 ```
 
 # Overview
-
 Data science executive building and deploying machine learning and algorithmic models in real time customer facing applications. 
 
-Broad leadership experience across data scientists, software engineers, data analysts, and data engineers, having scaled-from-zero durable teams across disciplines and companies. Pivoted from software engineering roles to data science to help companies unlock the value of their data as they pivot to modern transaction-based business models.
+Broad leadership experience across data scientists, software engineers, data analysts, and data engineers, having scaled-from-zero durable teams across disciplines and companies. Pivoted from software engineering roles to data science to help companies unlock the value of their data as they pivot to modern transaction-based business models. Pivoted again to machine learning engineering, which couples software sensibilities with algorithmic approaches to provide APIs and platforms which expose ML and AI to stakeholders.
  
 # Experience
-
 ```{r experience}
 my_experience <- tibble::tribble(
   ~title, ~start, ~end, ~company, ~why,
+  
+  # The Alegion Experience
+  
+  "Senior Director, Machine Learning", "March 2019", "", "Alegion, Inc", "Manage several person team responsible for creating human-in-the-loop machine learning capabilities into the core product",
+  "Senior Director, Machine Learning", "Jan 2019", "", "Alegion, Inc", "Assume roles of engineering leader, scrummaster, product owner, and team member as appropriate",
+  "Senior Director, Machine Learning", "Jan 2019", "", "Alegion, Inc", "Ideated and architected Active Learning workflow coupling machine learning with human annotators, which provides significant workflow efficiency",
+  "Senior Director, Machine Learning", "Jan 2019", "", "Alegion, Inc", "Implemented and directed Alegion's intellectual property program by liaisoning between outside Counsel, internal inventors, and executive sponsors",
   
   "Managing Director", "Jan 2018", "", "Thought and Memory LLC", "Managing a boutique data science consultancy helping clients build algorithmic solutions and cultures",
   # The DOSH Experience
@@ -87,7 +92,6 @@ my_experience %>% detailed_entries(
 ```
 
 # Education
-
 ```{r education}
 
 my_education <- tibble::tribble(
@@ -107,7 +111,6 @@ my_education %>% detailed_entries(
 ```
 
 # Volunteering
-
 ```{r volunteer}
 
 my_volunteer <- tibble::tribble(
@@ -127,7 +130,6 @@ my_volunteer %>% detailed_entries(
 ```
 
 # Certifications
-
 ```{r certifications}
 
 
@@ -144,4 +146,22 @@ my_certs %>% brief_entries(
   when = issued,
   with = issuer
 )
+```
+
+# Patents
+```{r patents}
+my_inventions <- tibble::tribble(
+  ~name, ~id, ~issued, ~issuer,
+  
+  "System, apparatus and method for segregating data in transactions via dedicated interface elements for isolated logic and repositories", "US9928498B2", "2018-03-27", "USPTO",
+  "Systems and methods to reconcile free-text with structured data", "US10339487B2", "2019-07-02", "USPTO"
+)
+
+my_inventions %>% detailed_entries(
+  what = paste(id, name),
+  when = issued,
+  with = issuer
+)
+
+
 ```
